# siomon

./: .gitignore  Cargo.toml  PACKAGING.md  README.md
.github/workflows/: gpg-keyserver-retry.yml  publish-ppa.yml  release.yml
kmod/sinfo_io/: Makefile  dkms.conf  sinfo_io.c  sinfo_io.h
packaging/aur/: PKGBUILD
packaging/launchpad/: README.md
packaging/launchpad/debian/: changelog  control  copyright  rules
packaging/launchpad/debian/source/: options
src/: cli.rs  config.rs  main.rs
src/output/: tui.rs
src/output/tui/: dashboard.rs  mod.rs  theme.rs
src/sensors/: gpu_sensors.rs  hsmp.rs  ipmi.rs  memory_util.rs  mod.rs  poller.rs
src/sensors/i2c/: mod.rs  pmbus.rs  smbus_io.rs
src/sensors/superio/: nct67xx.rs
tests/: integration.rs
