[package]
name = "siomon"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
description = "Linux hardware information and sensor monitoring tool"
license = "MIT"
keywords = ["hardware", "sensors", "hwmon", "system-info", "monitoring"]
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/level1techs/siomon"

[[bin]]
name = "sio"
path = "src/main.rs"

[features]
default = ["tui", "nvidia", "json", "csv"]
tui = ["dep:ratatui", "dep:crossterm"]
nvidia = ["dep:libloading"]
json = ["dep:serde_json"]
html = []
xml = ["dep:quick-xml"]
csv = ["dep:csv"]

# CPU identification (x86/x86_64 only)
[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
raw-cpuid = "11"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "0.8"

# XML output
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

# CSV logging
csv = { version = "1", optional = true }

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Unix / Linux syscalls
nix = { version = "0.29", features = ["fs", "ioctl", "mman", "process"] }
libc = "0.2"

# Dynamic loading (NVML)
libloading = { version = "0.8", optional = true }

# PCI device name resolution
pci-ids = "0.2"

# Error handling
thiserror = "2"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Sysfs enumeration
glob = "0.3"

# IPMI BMC sensor access via /dev/ipmi0 ioctl
ipmi-rs = { version = "0.5", default-features = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
